fix parallax spacing issues

--- a/src/app/components/faqs/FAQs.scss
+++ b/src/app/components/faqs/FAQs.scss
@@ -39,7 +39,7 @@
   }
   div.card-header {
     text-align: left;
-    font-size: 25px;
+    font-size: 1.4em;
     border: none;
     font-weight: bold;
     padding: 15px 0;
@@ -61,7 +61,7 @@
     color: #f2bfcb;
   }
   div.card-body {
-    font-size: 20px;
+    font-size: 1.2em;
     padding: 0 0 10px;
     @media screen and (max-width: 1200px) {
       font-size: 16px;
